# FAT32-2023

./: .gitignore  CMakeLists.txt  FAT32.cpp  FatTable.cpp  README.md  boot_record.cpp  directory_entry.cpp  main  main.cpp  node.cpp  util.cpp  util.hpp
br/: boot_record.cpp  boot_record.hpp
dr/: directory_entry.hpp
fs/: fat32.cpp  fat32.hpp
script.engine/: fat32.cpp  fat32.hpp
src/fs/: fat32_main.cpp
src/fs/fat/: boot_record.cpp  directory_entry.cpp  directory_entry.hpp  fat_table.cpp  fat_table.hpp
src/fs/vfs/: node.cpp
vfs/: node.cpp
